--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^3.17.0",
-    "nodemon": "^2.0.7",
-    "serialport": "^9.1.0",
-    "ts-node": "^10.0.0"
+    "serialport": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^15.6.2",
     "@types/serialport": "^8.0.1",
     "fastify-tsconfig": "^1.0.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "ts-node": "^10.0.0",
+    "nodemon": "^2.0.7"
   }
 }
