--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "devDependencies": {
     "@types/node": "^15.6.2",
     "@types/serialport": "^8.0.1",
+    "env-cmd": "^10.1.0",
     "fastify-tsconfig": "^1.0.1",
-    "typescript": "^4.3.2",
+    "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
-    "nodemon": "^2.0.7"
+    "typescript": "^4.3.2"
   }
 }
